[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.59.2",
    "matplotlib>=3.11.0",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

